--- a/new-page.html
+++ b/new-page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pug images</title>
+    <link rel="shortcut icon" href=".//img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <img src="./img/pug.jpg" alt="pugs" width="500"/>
